[package]
name = "network_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns-sd = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = { version = "2.6.2", features = ["json", "serde", "serde_json"] }
url = "2.3.1"

[[bin]]
name = "client"

[[bin]]
name = "server"
