[package]
name = "network_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
hex = "0.4.3"
mdns-sd = "0.7.2"
network-interface = "1.0.3"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
axum = { version = "0.6.20", features = ["json", "headers", "tracing"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
ureq = { version = "2.6.2", features = ["json", "serde", "serde_json"] }
url = "2.3.1"
uuid = { version = "1.4.1", features = ["v4"] }
axum-range = "0.3.0"
hexdump = "0.1.1"
env_logger = "0.11.3"
log = "0.4.21"
indicatif = "0.17.8"

[[bin]]
name = "client"

[[bin]]
name = "server"
